--- a/app/templates/events/page.twig
+++ b/app/templates/events/page.twig
@@ -36,7 +36,7 @@
                         <div class="control">
                             <div class="file has-name is-fullwidth">
                                 <label class="file-label">
-                                    <input type="file" class="file-input" name="locandina"/>
+                                    <input type="file" id="input-locandina" class="file-input" name="locandina"/>
                                     <span class="file-cta">
                                         <span class="file-icon">
                                             <i class="fa fa-upload"></i>
