--- a/app/templates/layouts/main.twig
+++ b/app/templates/layouts/main.twig
@@ -29,7 +29,7 @@
             {% endif %}
         {% endfor %}
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <noscript>
             <link rel="stylesheet" href="{{ baseUrl }}/assets/css/font-awesome.min.css">
