--- a/app/templates/events/create.twig
+++ b/app/templates/events/create.twig
@@ -4,6 +4,8 @@
 {% block metaTitle %}Creazione evento{% endblock %}
 
 {% block content %}
+    {%- set thisYear = "now"|date('Y') %}
+
     <section class="section">
         <div class="container">
             <div class="columns">
@@ -29,24 +31,126 @@
 
                         <div class="field">
                             <label class="label">Data e ora inizio</label>
-                            <p class="control has-icons-left">
-                                <input class="input" type="text" name="istanteInizio" value=""
-                                       placeholder="yyyy-mm-gg hh:mm:ss">
-                                <span class="icon is-small is-left">
-                                    <i class="fa fa-edit"></i>
-                                </span>
-                            </p>
+                            <div class="columns">
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="giornoInizio">
+                                                    {% for i in range(1, 31) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="meseInizio">
+                                                    {% for i in range(1, 12) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="annoInizio">
+                                                    {% for i in range(thisYear, thisYear+3) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="column"></div>
+
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="oraInizio">
+                                                    {% for i in range(1, 24) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="minutoInizio">
+                                                    {% for i in range(0, 59) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="field">
                             <label class="label">Data e ora fine</label>
-                            <p class="control has-icons-left">
-                                <input class="input" type="text" name="istanteFine" value=""
-                                       placeholder="yyyy-mm-gg hh:mm:ss">
-                                <span class="icon is-small is-left">
-                                    <i class="fa fa-edit"></i>
-                                </span>
-                            </p>
+                            <div class="columns">
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="giornoFine">
+                                                    {% for i in range(1, 31) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="meseFine">
+                                                    {% for i in range(1, 12) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="annoFine">
+                                                    {% for i in range(thisYear, thisYear+3) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="column"></div>
+
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="oraFine">
+                                                    {% for i in range(1, 24) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="minutoFine">
+                                                    {% for i in range(0, 59) %}
+                                                        <option value="{{ i }}">{{ i }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="select is-multiple">
