--- a/app/templates/events/edit.twig
+++ b/app/templates/events/edit.twig
@@ -4,6 +4,8 @@
 {% block metaTitle %}Modifica evento{% endblock %}
 
 {% block content %}
+    {%- set thisYear = "now"|date('Y') %}
+
     <section class="section">
         <div class="container">
             <div class="columns">
@@ -41,36 +43,257 @@
 
                         <div class="field">
                             <label class="label">Data e ora creazione</label>
-                            <p class="control has-icons-left">
-                                <input class="input" type="text" name="istanteCreazione"
-                                       value="{{ evento.istanteCreazione|e('html_attr') }}"
-                                       readonly>
-                                <span class="icon is-small is-left">
-                                    <i class="fa fa-edit"></i>
-                                </span>
-                            </p>
+                            <div class="columns">
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="giornoCreazione" disabled>
+                                                        <option value="{{ evento.istanteCreazione|date('d') }}">
+                                                            {{ evento.istanteCreazione|date('d') }}
+                                                        </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="meseCreazione" disabled>
+                                                    <option value="{{ evento.istanteCreazione|date('m') }}">
+                                                        {{ evento.istanteCreazione|date('m') }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="annoCreazione" disabled>
+                                                    <option value="{{ evento.istanteCreazione|date('Y') }}">
+                                                        {{ evento.istanteCreazione|date('Y') }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="column"></div>
+
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="oraCreazione" disabled>
+                                                    <option value="{{ evento.istanteCreazione|date('H') }}">
+                                                        {{ evento.istanteCreazione|date('H') }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="minutoCreazione" disabled>
+                                                    <option value="{{ evento.istanteCreazione|date('i') }}">
+                                                        {{ evento.istanteCreazione|date('i') }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="secondoCreazione" disabled>
+                                                    <option value="{{ evento.istanteCreazione|date('s') }}">
+                                                        {{ evento.istanteCreazione|date('s') }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="field">
                             <label class="label">Data e ora inizio</label>
-                            <p class="control has-icons-left">
-                                <input class="input" type="text" name="istanteInizio"
-                                       value="{{ evento.istanteInizio|e('html_attr') }}">
-                                <span class="icon is-small is-left">
-                                    <i class="fa fa-edit"></i>
-                                </span>
-                            </p>
+                            <div class="columns">
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="giornoInizio">
+                                                    {% for i in range(1, 31) %}
+                                                        <option value="{{ i }}"
+                                                        {%- if i == evento.istanteInizio|date('d')  %}
+                                                            selected
+                                                        {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="meseInizio">
+                                                    {% for i in range(1, 12) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteInizio|date('m')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="annoInizio">
+                                                    {% for i in range(thisYear, thisYear+3) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteInizio|date('Y')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="column"></div>
+
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="oraInizio">
+                                                    {% for i in range(1, 24) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteInizio|date('H')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="minutoInizio">
+                                                    {% for i in range(0, 59) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteInizio|date('i')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="field">
                             <label class="label">Data e ora fine</label>
-                            <p class="control has-icons-left">
-                                <input class="input" type="text" name="istanteFine"
-                                       value="{{ evento.istanteFine|e('html_attr') }}">
-                                <span class="icon is-small is-left">
-                                    <i class="fa fa-edit"></i>
-                                </span>
-                            </p>
+                            <div class="columns">
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="giornoFine">
+                                                    {% for i in range(1, 31) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteFine|date('d')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="meseFine">
+                                                    {% for i in range(1, 12) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteFine|date('m')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="annoFine">
+                                                    {% for i in range(thisYear, thisYear+3) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteFine|date('Y')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="column"></div>
+
+                                <div class="column">
+                                    <div class="columns">
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="oraFine">
+                                                    {% for i in range(1, 24) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteFine|date('H')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="select">
+                                                <select name="minutoFine">
+                                                    {% for i in range(0, 59) %}
+                                                        <option value="{{ i }}"
+                                                                {%- if i == evento.istanteFine|date('i')  %}
+                                                                    selected
+                                                                {%- endif %}
+                                                        >
+                                                            {{ i }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="field">
