--- a/app/templates/front/home.twig
+++ b/app/templates/front/home.twig
@@ -23,16 +23,41 @@
                             </div>
                             <div class="media-content">
                                 <div class="content">
+                                    <div class="level">
+                                        <div class="level-left">
+                                            <div class="level-item">
+                                                <strong>
+                                                    <a href="{{ path_for('page', {'id': evento.idEvento })|e('html_attr') }}">
+                                                        {{ evento.titolo }}
+                                                    </a>
+                                                </strong>
+                                            </div>
+                                            <div class="level-item">
+                                                <small>{{ evento.istanteInizio|date('d/m/Y H:i') }}</small>
+                                            </div>
+                                            <div class="level-item">
+                                                al&nbsp;&nbsp;<small>{{ evento.istanteFine|date('d/m/Y H:i') }}</small>
+                                            </div>
+                                        </div>
+                                        <div class="level-right">
+                                            <div class="level-item">
+                                                <a href="{{ path_for('eventsEdit', {'id': evento.idEvento })|e('html_attr') }}">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                            </div>
+                                            <div class="level-item">
+                                                <a href="{{ path_for('eventsPage', {'id': evento.idEvento })|e('html_attr') }}">
+                                                    <i class="fa fa-align-left"></i>
+                                                </a>
+                                            </div>
+                                            <div class="level-item">
+                                                <a href="{{ path_for('eventsDelete', {'id': evento.idEvento })|e('html_attr') }}">
+                                                    <i class="fa fa-trash is-danger"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <p>
-                                        <strong>
-                                            <a href="{{ path_for('page', {'id': evento.idEvento })|e('html_attr') }}">
-                                                {{ evento.titolo }}
-                                            </a>
-                                        </strong>
-                                        -
-                                        Inizio: <small>{{ evento.istanteInizio|date('d/m/Y H:i') }}</small>
-                                        - Fine: <small>{{ evento.istanteFine|date('d/m/Y H:i') }}</small>
-                                        <br>
                                         {{ evento.descrizione }}
                                     </p>
                                 </div>
